# 02-advanced-chatbot

./: 001-simple-chatbot.py  002-advanced-chatbot.py  messages.json  pyproject.toml  zzz-nb001-simple-chatbot.ipynb
.ipynb_checkpoints/: zzz-nb001-simple-chatbot-checkpoint.ipynb  zzz-nb002-advanced-chatbot-checkpoint.ipynb
